--- a/PageTheScroll/Base.lproj/Main.storyboard
+++ b/PageTheScroll/Base.lproj/Main.storyboard
@@ -1,14 +1,19 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12120" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12088"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="PageTheScroll" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -16,11 +21,64 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Sky" translatesAutoresizingMaskIntoConstraints="NO" id="rtr-TV-TyQ">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                <gestureRecognizers/>
+                                <connections>
+                                    <outletCollection property="gestureRecognizers" destination="eKr-z8-auO" appends="YES" id="AMX-p5-GdN"/>
+                                </connections>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Sun" translatesAutoresizingMaskIntoConstraints="NO" id="ypP-Pi-14d">
+                                <rect key="frame" x="272" y="28" width="87" height="87"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="87" id="gRa-Uq-f8c"/>
+                                    <constraint firstAttribute="height" constant="87" id="maR-pn-obY"/>
+                                </constraints>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Mountains" translatesAutoresizingMaskIntoConstraints="NO" id="pxd-yY-R1X">
+                                <rect key="frame" x="0.0" y="497" width="375" height="170"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="170" id="hnu-2c-PHg"/>
+                                </constraints>
+                            </imageView>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" pagingEnabled="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wLA-xg-LH8">
+                                <rect key="frame" x="77.5" y="0.0" width="220" height="667"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="220" id="okC-se-8cK"/>
+                                </constraints>
+                            </scrollView>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="wLA-xg-LH8" secondAttribute="bottom" id="0qK-sj-hUS"/>
+                            <constraint firstItem="wLA-xg-LH8" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="3Il-oJ-Rp0"/>
+                            <constraint firstAttribute="trailing" secondItem="pxd-yY-R1X" secondAttribute="trailing" id="5ju-yk-9J2"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="pxd-yY-R1X" secondAttribute="bottom" id="5v2-Cz-nfM"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="rtr-TV-TyQ" secondAttribute="bottom" id="LzL-fT-s2O"/>
+                            <constraint firstAttribute="trailing" secondItem="rtr-TV-TyQ" secondAttribute="trailing" id="Nby-bW-8Lw"/>
+                            <constraint firstItem="pxd-yY-R1X" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="Rum-ZH-HqK"/>
+                            <constraint firstItem="rtr-TV-TyQ" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="TSi-0Z-QrI"/>
+                            <constraint firstItem="ypP-Pi-14d" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="8" id="X8q-Bk-j8P"/>
+                            <constraint firstItem="ypP-Pi-14d" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailingMargin" id="hwH-eO-uxl"/>
+                            <constraint firstItem="wLA-xg-LH8" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="lVx-pm-GOm"/>
+                            <constraint firstItem="rtr-TV-TyQ" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="zyE-Y4-MWg"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="scrollView" destination="wLA-xg-LH8" id="hUP-1R-Lx6"/>
+                        <outlet property="swipeGestureRecognizer" destination="eKr-z8-auO" id="Cya-6Z-ilv"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                <swipeGestureRecognizer direction="right" id="eKr-z8-auO"/>
             </objects>
+            <point key="canvasLocation" x="117.59999999999999" y="122.78860569715144"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="Mountains" width="375" height="100"/>
+        <image name="Sky" width="375" height="667"/>
+        <image name="Sun" width="53" height="53"/>
+    </resources>
 </document>
